@@ -1,8 +1,10 @@
 package com.pmarshall.chessgame.model.game;
 
-import com.pmarshall.chessgame.model.api.LegalMove;
+import com.pmarshall.chessgame.model.dto.*;
 import com.pmarshall.chessgame.model.moves.Promotion;
+import com.pmarshall.chessgame.model.moves.Castling;
 import com.pmarshall.chessgame.model.pieces.*;
+import com.pmarshall.chessgame.model.pieces.Piece;
 import com.pmarshall.chessgame.model.properties.Color;
 import com.pmarshall.chessgame.model.properties.PieceType;
 import com.pmarshall.chessgame.model.properties.Position;
@@ -10,7 +12,11 @@ import com.pmarshall.chessgame.model.moves.Move;
 import com.pmarshall.chessgame.model.service.Game;
 import org.apache.commons.lang3.tuple.Pair;
 
+import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
  * @author Paweł Marszał
@@ -87,10 +93,6 @@ public class InMemoryChessGame implements Game {
     }
 
     // Getters
-
-    public Piece getPiece(int i, int j) {
-        return this.board[i][j];
-    }
 
     public Player getCurrentPlayer() {
         return this.currentPlayer;
@@ -175,13 +177,13 @@ public class InMemoryChessGame implements Game {
     }
 
     @Override
-    public Pair<PieceType, Color>[][] getBoardWithPieces() {
-        Pair<PieceType, Color>[][] result = new Pair[8][8];
+    public com.pmarshall.chessgame.model.dto.Piece[][] getBoardWithPieces() {
+        com.pmarshall.chessgame.model.dto.Piece[][] result = new com.pmarshall.chessgame.model.dto.Piece[8][8];
         for (int i = 0; i < 8; i++) {
             for (int j = 0; j < 8; j++) {
                 Piece piece = board[i][j];
                 if (piece != null) {
-                    result[i][j] = Pair.of(piece.getType(), piece.getColor());
+                    result[i][j] = new com.pmarshall.chessgame.model.dto.Piece(piece.getType(), piece.getColor());
                 }
             }
         }
@@ -189,10 +191,53 @@ public class InMemoryChessGame implements Game {
     }
 
     @Override
+    public com.pmarshall.chessgame.model.dto.Piece getPiece(Position on) {
+        Piece piece = board[on.x()][on.y()];
+        if (piece == null) {
+            return null;
+        } else {
+            return new com.pmarshall.chessgame.model.dto.Piece(piece.getType(), piece.getColor());
+        }
+    }
+
     public List<LegalMove> legalMoves() {
-        return currentPlayer.getAllPossibleMoves().stream().map(
-                move -> new LegalMove(move.getPieceToMove().getPosition(), move.getNewPosition(), move instanceof Promotion)
-        ).toList();
+        return currentPlayer.getAllPossibleMoves().stream().map(move -> {
+            if (move instanceof Promotion p) {
+                return new com.pmarshall.chessgame.model.dto.Promotion(
+                        move.getPieceToMove().getPosition(), move.getNewPosition(), Map.of()); // TODO: get possible checks from different promotions
+            }
+            if (move instanceof Castling c) {
+                return new com.pmarshall.chessgame.model.dto.Castling(
+                        move.getPieceToMove().getPosition(), move.getNewPosition(),
+                        c.getNewPosition().y() == 2, move.isWithCheck());
+            }
+            // TODO: en-passant needs to be handled here, because it's represented as BasicMove :/
+            return new DefaultMove(move.getPieceToMove().getPosition(), move.getNewPosition(), move.isWithCheck());
+        }).collect(Collectors.toList());
+    }
+
+    @Override
+    public Collection<Position> legalMovesFrom(Position from) {
+        Piece piece = this.board[from.x()][from.y()];
+        if (piece == null)
+            return Collections.emptyList();
+        return piece.getPossibleMoves().stream().map(Move::getNewPosition).collect(Collectors.toList());
+    }
+
+    @Override
+    public boolean isMoveLegal(Position from, Position to) {
+        Piece piece = this.board[from.x()][from.y()];
+        if (piece == null)
+            return false;
+        return piece.findMoveByTargetPosition(to) != null;
+    }
+
+    @Override
+    public boolean isPromotionRequired(Position from, Position to) {
+        Piece piece = this.board[from.x()][from.y()];
+        if (piece == null)
+            return false;
+        return piece.findMoveByTargetPosition(to) instanceof Promotion;
     }
 
     @Override
@@ -283,8 +328,11 @@ public class InMemoryChessGame implements Game {
 
         // update moves (without concern for king's safety)
         this.getOtherPlayer().getPieces().forEach(p -> p.updateMovesWithoutProtectingKing(this));
-        // check is current king is now threatened
+        // check if current king is now threatened
         boolean isKingUnderCheck = this.isPosThreatened(this.currentPlayer.getKing().getPosition(), this.getOtherPlayer());
+
+        // if move puts opponent's king into check, mark it
+        move.setWithCheck(this.isPosThreatened(this.getOtherPlayer().getKing().getPosition(), this.currentPlayer));
 
         // undo move
         this.lastMove = trulyLastMove;
